# pico-fpga

./: .gitignore  CMakeLists.txt  README.md  cmd.c  cmd.h  gpio_cmd.c  gpio_cmd.h  jtag.pio  la.c  la.h  logic_analyzer.pio  main.c  pin_manager.c  pin_manager.h  pio_alloc.c  pio_alloc.h  uart_rx.pio  uart_tx.pio
fpga/pin_test/: pin_test.qpf  pin_test.qsf  pin_test.sdc  pin_test.v
jtag/: fpga_altera.c  fpga_altera.h  fpga_lattice.c  fpga_lattice.h  fpga_xilinx.c  fpga_xilinx.h  jtag.c  jtag.h  jtag_tap.c  jtag_tap.h  svf_player.c  svf_player.h
test/: run_tests.sh  test_jtag_loopback.sh  test_la_gpio_loopback.sh  test_pinout_verify.sh  test_uart_loopback.sh
uart/: hw_uart.c  hw_uart.h  pio_uart.c  pio_uart.h
